--- a/js-algorithm/섹션 1/1.7. 10부제.html
+++ b/js-algorithm/섹션 1/1.7. 10부제.html
@@ -7,10 +7,11 @@
         <script>
             function solution(day, arr){
                 let answer=0;
-               
+                for(let x of arr) {
+                    if(x % 10 == day) answer++;
+                }
                 return answer;
             }
-            
             arr=[25, 23, 11, 47, 53, 17, 33];
             console.log(solution(3, arr));
         </script>
