--- a/js-algorithm/섹션 1/1.11. 대문자 찾기.html
+++ b/js-algorithm/섹션 1/1.11. 대문자 찾기.html
@@ -7,7 +7,7 @@
         <script>
             function solution(s){         
                 let answer=0;
-                
+                answer = [...s].filter(v => v === v.toUpperCase()).length;                
                 return answer;
             }
 
