--- a/js-algorithm/섹션 1/1.12. 대문자로 통일.html
+++ b/js-algorithm/섹션 1/1.12. 대문자로 통일.html
@@ -7,7 +7,7 @@
         <script>
             function solution(s){         
                 let answer="";
-                
+                answer = [...s].map(v => v.toUpperCase()).join("")
                 return answer;
 
             }
