--- a/js-algorithm/섹션 1/1.13. 대소문자 변환.html
+++ b/js-algorithm/섹션 1/1.13. 대소문자 변환.html
@@ -7,6 +7,10 @@
         <script>
             function solution(s){  
                 let answer="";
+                answer = [...s].map(v => {
+                    if(v === v.toUpperCase()) return v.toLowerCase();
+                    else return v.toUpperCase();
+                }).join("")
                 
                 return answer;
             }
