--- a/js-algorithm/섹션 1/1.14. 가장 긴 문자열.html
+++ b/js-algorithm/섹션 1/1.14. 가장 긴 문자열.html
@@ -7,7 +7,17 @@
         <script>
             function solution(s){  
                 let answer="", max=Number.MIN_SAFE_INTEGER;
-                
+                // for(let i=0; i < s.length-1; i++) {
+                //     if(s[i].length >= s[i+1].length)
+                //         answer = s[i];
+                //     else answer = s[i+1];
+                // }
+                for(let x of s){
+                    if(x.length>max){
+                        max=x.length;
+                        answer=x;
+                    }
+                }
                 return answer;
             }
             let str=["teacher", "time", "student", "beautiful", "good"];
