--- a/js-algorithm/섹션 1/1.15. 가운데 문자 출력.html
+++ b/js-algorithm/섹션 1/1.15. 가운데 문자 출력.html
@@ -7,7 +7,11 @@
         <script>
             function solution(s){  
                 let answer;
-                
+                let mid = Math.floor(s.length/2);
+                // if(s.length % 2 == 0) answer = s.substring(mid-1,mid+1);
+                // else answer = s.substring(mid, mid+1);
+                if(s.length%2===1) answer=s.substr(mid, 1);
+                else answer=s.substr(mid-1, 2);
                 return answer;
             }
             console.log(solution("study"));
