--- a/js-algorithm/섹션 1/1.16. 중복문자제거.html
+++ b/js-algorithm/섹션 1/1.16. 중복문자제거.html
@@ -5,9 +5,12 @@
     </head>
     <body>
         <script>
-            function solution(s){  
+            function solution([...s]){  
                 let answer="";
-                
+                for(let i=0; i<s.length; i++){
+                    // console.log(s[i], i, s.indexOf(s[i]));
+                    if(s.indexOf(s[i])===i) answer+=s[i];
+                }
                 return answer;
             }
             console.log(solution("ksekkset"));
