--- a/js-algorithm/섹션 1/1.17. 중복단어제거.html
+++ b/js-algorithm/섹션 1/1.17. 중복단어제거.html
@@ -5,9 +5,11 @@
     </head>
     <body>
         <script>
-            function solution(s){  
-                let answer;
-                
+            function solution(s = [...s]){  
+                let answer = [], word = "";
+                for(let i=0; i < s.length; i++) {
+                    if(s.indexOf(s[i]) === i) answer.push(s[i]);
+                }
                 return answer;
             }
             let str=["good", "time", "good", "time", "student"];
