--- a/js-algorithm/섹션 3/4. 가장 짧은 문자거리.html
+++ b/js-algorithm/섹션 3/4. 가장 짧은 문자거리.html
@@ -7,25 +7,30 @@
         <script>
             function solution(s, t){
                 let answer=[];
-                let p=1000;
-                for(let x of s){
-                    if(x===t){
-                        p=0;
+                let p = 1000;
+                for(let i=0; i < s.length; i++) {
+                    if(s[i] === t) {
+                        p = 0;
                         answer.push(p);
                     }
-                    else{
+                    else {
                         p++;
                         answer.push(p);
                     }
                 }
-                p=1000;
-                for(let i=s.length-1; i>=0; i--){
-                    if(s[i]===t) p=0;
-                    else{
+                p = 1000;
+                for(let j=s.length-1; j >= 0; j--) {
+                    if(s[j] === t) {
+                        p = 0;
+                        answer[j] = p;
+                    }
+                    else {
                         p++;
-                        answer[i]=Math.min(answer[i], p);
+                        if(answer[j] > p)
+                            answer[j] = p;
                     }
                 }
+                
                 return answer;
             }
             
