--- a/js-algorithm/섹션 3/4. 가장 짧은 문자거리.html
+++ b/js-algorithm/섹션 3/4. 가장 짧은 문자거리.html
@@ -27,7 +27,7 @@
                     else {
                         p++;
                         if(answer[j] > p)
-                            answer[j] = p;
+                            answer[j] = p; // answer[i]=Math.min(answer[i], p);
                     }
                 }
                 
