--- a/js-algorithm/섹션 3/5. 문자열 압축.html
+++ b/js-algorithm/섹션 3/5. 문자열 압축.html
@@ -7,16 +7,17 @@
         <script>
             function solution(s){
                 let answer="";
-                let cnt=1;
-                s=s+" ";
-                for(let i=0; i<s.length-1; i++){
-                    if(s[i]===s[i+1]) cnt++;
-                    else{
-                        answer+=s[i];
-                        if(cnt>1) answer+=String(cnt);
-                        cnt=1;
+                let cnt = 1;
+                for(let i=0; i < s.length-1; i++) {
+                    if(s[i] == s[i+1]) cnt++;
+                    else {
+                        answer += s[i];
+                        if(cnt !== 1)
+                            answer += String(cnt);
+                        cnt = 1;
                     }
                 }
+                
                 return answer;
             }
             
