--- a/js-algorithm/섹션 4/4. 졸업선물.html
+++ b/js-algorithm/섹션 4/4. 졸업선물.html
@@ -7,20 +7,23 @@
         <script>
             function solution(m, product){
                 let answer=0;
-                let n=product.length;
-                product.sort((a, b)=>(a[0]+a[1])-(b[0]+b[1]));
-                for(let i=0; i<n; i++){
-                    let money=m-(product[i][0]/2+product[i][1]);
-                    let cnt=1;
-                    for(let j=0; j<n; j++){
-                        if(j!==i && (product[j][0]+product[j][1])>money) break;
-                        if(j!==i && (product[j][0]+product[j][1])<=money){
-                            money-=(product[j][0]+product[j][1]);
+                product.sort((a, b) => (a[0]+a[1]) - (b[0]+b[1])); // sort by total price
+                console.log(product);
+                for(let i=0; i<product.length; i++) {
+                    let cnt = 1;
+                    let total = m - (product[i][0]/2 + product[i][1]); // 항목 별 50% 쿠폰을 사용했을 때의 모든 경우의 수를 비교한다. (완전탐색)
+                    for(let j=0; j < product.length; j++) {
+                        console.log(i, m, cnt);
+                        if(i !== j && (total - (product[j][0] + product[j][1])) >= 0) {
+                            total -= (product[j][0] + product[j][1]);
                             cnt++;
                         }
+                        if(i !== j && (total - (product[j][0] + product[j][1])) < 0) {
+                            break;
+                        }
                     }
-                    answer=Math.max(answer, cnt);
-                }  
+                    answer = Math.max(answer, cnt);
+                }
                 return answer;
             }
             
