--- a/js-algorithm/섹션 5/1. 두 배열 합치기.html
+++ b/js-algorithm/섹션 5/1. 두 배열 합치기.html
@@ -7,10 +7,15 @@
         <script>
             function solution(arr1, arr2){
                 let answer=[];
-                let n=arr1.length;
-                let m=arr2.length;
-                let p1=p2=0;
-                
+                let i = 0,  j = 0;
+                while(i  < arr1.length && j  < arr2.length){
+                    if(arr1[i] > arr2[j]) answer.push(arr2[j++]);
+                    else if(arr1[i] == arr2[j]) answer.push(arr1[i++]);
+                    else answer.push(arr1[i++]);
+                }
+                while(i < arr1.length) answer.push(arr1[i++]);
+                while(j < arr2.length) answer.push(arr2[j++]);
+
                 return answer;
             }
             
