--- a/js-algorithm/섹션 5/2. 공통원소구하기.html
+++ b/js-algorithm/섹션 5/2. 공통원소구하기.html
@@ -7,17 +7,18 @@
         <script>
             function solution(arr1, arr2){
                 let answer=[];
-                arr1.sort();
-                arr2.sort();
-                let p1=p2=0;
-                while(p1<arr1.length && p2<arr2.length){
-                    if(arr1[p1]==arr2[p2]){
-                        answer.push(arr1[p1++]);
-                        p2++;
+                let i=0, j=0;
+                arr1.sort((a,b) => a-b);
+                arr2.sort((a,b) => a-b);
+                while(i  < arr1.length && j < arr2.length)  {
+                    if(arr1[i] === arr2[j]){
+                        answer.push(arr1[i++]);
+                        j++;
                     }
-                    else if(arr1[p1]<arr2[p2]) p1++;
-                    else p2++;
-                }              
+                    else if(arr1[i] < arr2[j]) i++;
+                    else j++;
+                }
+
                 return answer;
             }
             
