--- a/js-algorithm/섹션 5/4. 연속부분수열2.html
+++ b/js-algorithm/섹션 5/4. 연속부분수열2.html
@@ -6,14 +6,8 @@
     <body>
         <script>
             function solution(m, arr){
-                let answer=0, sum=0, lt=0;
-                for(let rt=0; rt<arr.length; rt++){
-                    sum+=arr[rt];
-                    while(sum>m){
-                        sum-=arr[lt++];
-                    }
-                    answer+=(rt-lt+1);
-                }               
+                let answer=0;
+                
                 return answer;
             }
             
