--- a/js-algorithm/섹션 5/5. 최대 매출.html
+++ b/js-algorithm/섹션 5/5. 최대 매출.html
@@ -6,13 +6,8 @@
     <body>
         <script>
             function solution(k, arr){
-                let answer, sum=0;
-                for(let i=0; i<k; i++) sum+=arr[i];
-                answer=sum;
-                for(let i=k; i<arr.length; i++){
-                    sum+=(arr[i]-arr[i-k]);
-                    answer=Math.max(answer, sum);
-                }                    
+                let answer;
+                        
                 return answer;
             }
             
