Docs: 확장자 변경 (txt->html)

--- a/js-algorithm/섹션 6/4. 후위식 연산.html
+++ b/js-algorithm/섹션 6/4. 후위식 연산.html
@@ -7,18 +7,11 @@
         <script>
             function solution(s){  
                 let answer;
-                let stack=[];
-                for(let x of s){
-                    if(x===')'){
-                        while(stack.pop()!=='(');
-                    }
-                    else stack.push(x);
-                }
-                answer=stack.join('');
+                
                 return answer;
             }
 
-            let str="(A(BC)D)EF(G(H)(IJ)K)LM(N)";
+            let str="352+*9-";
             console.log(solution(str));
         </script>
     </body>
