--- a/js-algorithm/섹션 7/4. 삽입정렬.html
+++ b/js-algorithm/섹션 7/4. 삽입정렬.html
@@ -7,22 +7,15 @@
         <script>
             function solution(arr){
                 let answer=arr;
-                for(let i=0; i<arr.length-1; i++){
-                    for(let j=0; j<arr.length-i-1; j++){
-                        if(arr[j]>0 && arr[j+1]<0){
-                            [arr[j], arr[j+1]]=[arr[j+1], arr[j]];
-                        }
-                    }   
-                } 
+                
                 return answer;
             }
 
-            let arr=[1, 2, 3, -3, -2, 5, 6, -6];
+            let arr=[11, 7, 5, 6, 10, 9];
             console.log(solution(arr));
         </script>
     </body>
 </html>
-
 
 
 <html>
@@ -34,16 +27,11 @@
         <script>
             function solution(arr){
                 let answer=[];
-                for(let x of arr){
-                    if(x<0) answer.push(x);
-                }
-                for(let x of arr){
-                    if(x>0) answer.push(x);
-                }
+                
                 return answer;
             }
 
-            let arr=[1, 2, 3, -3, -2, 5, 6, -6];
+            let arr=[11, 7, 5, 6, 10, 9];
             console.log(solution(arr));
         </script>
     </body>
